fix: (slideshow) text not visible in front of the images

--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,17 @@ p.outset {
   height: auto;
   object-fit: contain;
 }
+
+.mySlides  .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.6); /* Black background with 60% opacity */
+}
 .achievement-content .column {
   width: 200px;
   height: 200px;
